fix(frontend): collapsed sidebar layout appears slightly broken

--- a/modules/core/site.css
+++ b/modules/core/site.css
@@ -1,5 +1,5 @@
 :root {
-  --nav-collapsed-size: 100px;
+  --nav-collapsed-size: 140px;
   --nav-expanded-size: 320px;
   --nav-size: var(--nav-expanded-size);
 }
